--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
         />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/imageview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
